# drivers_interface

./: CODEOWNERS  README.md  README_ZH.md  README_zh.md  hdi.diff
.gitee/: CODEOWNERS
activity_recognition/: bundle.json
audio/: audio.gni  bundle.json
audio/effect/v1_0/: BUILD.gn  EffectTypes.idl  IEffectControl.idl  IEffectModel.idl
audio/v1_0/: AudioAdapter.idl  AudioCallback.idl  AudioCapture.idl  AudioManager.idl  AudioRender.idl  AudioTypes.idl  BUILD.gn  IAudioAdapter.idl  IAudioCallback.idl  IAudioCapture.idl  IAudioManager.idl  IAudioRender.idl
audio/v1_1/: AudioTypes.idl  BUILD.gn  IAudioAdapter.idl  IAudioCallback.idl  IAudioCapture.idl  IAudioManager.idl  IAudioRender.idl
audio/v2_0/: AudioTypes.idl  BUILD.gn  IAudioAdapter.idl  IAudioCallback.idl  IAudioCapture.idl  IAudioManager.idl  IAudioRender.idl
audio/v3_0/: AudioTypes.idl  BUILD.gn  IAudioAdapter.idl  IAudioCallback.idl  IAudioCapture.idl  IAudioManager.idl  IAudioRender.idl
audio/v4_0/: AudioTypes.idl  BUILD.gn  IAudioAdapter.idl  IAudioCallback.idl  IAudioCapture.idl  IAudioManager.idl  IAudioRender.idl
audio/v5_0/: AudioTypes.idl  BUILD.gn  IAudioAdapter.idl  IAudioCallback.idl  IAudioCapture.idl  IAudioManager.idl  IAudioRender.idl
audio/v6_0/: AudioTypes.idl  BUILD.gn  IAudioAdapter.idl  IAudioCallback.idl  IAudioCapture.idl  IAudioManager.idl  IAudioRender.idl
audio/v6_1/: AudioTypes.idl  BUILD.gn  IAudioAdapter.idl  IAudioCallback.idl  IAudioCapture.idl  IAudioCaptureCallback.idl  IAudioManager.idl  IAudioRender.idl
battery/: bundle.json
bluetooth/: bundle.json
camera/: bundle.json  camera.gni
camera/metadata/: BUILD.gn  README_zh.md
camera/metadata/include/: camera_device_ability_items.h  camera_example_vendor_tags.h  camera_metadata_info.h  camera_metadata_item_info.h  camera_metadata_operator.h  camera_vendor_tag.h  metadata_log.h  metadata_utils.h  video_key_info.h
camera/metadata/src/: camera_metadata_info.cpp  camera_metadata_operator.cpp  metadata_utils.cpp
camera/metadata/v1_0/: BUILD.gn  ICameraVendorTag.idl  VendorTagType.idl
camera/sequenceable/map_data/: BUILD.gn  map_data_sequenceable.cpp  map_data_sequenceable.h
camera/v1_3/: BUILD.gn  ICameraDevice.idl  ICameraHost.idl  IImageProcessCallback.idl  IImageProcessService.idl  IStreamOperator.idl  IStreamOperatorCallback.idl  IVideoProcessCallback.idl  IVideoProcessService.idl  IVideoProcessSession.idl  Types.idl
codec/: bundle.json
codec/parcelable/: BUILD.gn  error_type.h  key_value.h  parcelable_buffer.h  parcelable_fd.h  parcelable_param.h
codec/zcodec/v1_0/: BUILD.gn  HdiZCallback.idl  HdiZComponent.idl  HdiZFactory.idl  HdiZTypes.idl
connected_nfc_tag/: bundle.json
display/: bundle.json  display_config.gni
display/buffer/v1_1/: BUILD.gn  IMetadata.idl
display/buffer/v1_1/hdi_impl/: display_buffer_hdi_impl.cpp  display_buffer_hdi_impl.h
display/buffer/v1_3/: BUILD.gn  DisplayBufferType.idl  IMapper.idl
display/buffer/v1_3/hdi_impl/: display_buffer_hdi_impl.cpp  display_buffer_hdi_impl.h
display/buffer/v1_3/include/: idisplay_buffer.h
display/composer/cache_manager/: BUILD.gn  buffer_cache_utils.h  cache_manager.h  device_cache.cpp  device_cache.h  device_cache_manager.cpp  device_cache_manager.h  layer_cache.cpp  layer_cache.h
display/composer/hdifd_parcelable/: BUILD.gn  hdifd_parcelable.cpp  hdifd_parcelable.h
display/composer/v1_0/: BUILD.gn  DisplayComposerType.idl  IDisplayComposer.idl  IHotPlugCallback.idl  IRefreshCallback.idl  IVBlankCallback.idl
display/composer/v1_0/cache_manager/: buffer_cache_utils.h  cache_manager.h  device_cache.cpp  device_cache.h  device_cache_manager.cpp  device_cache_manager.h  layer_cache.cpp  layer_cache.h
display/composer/v1_0/display_command/: display_cmd_requester.h  display_cmd_responser.h  display_cmd_utils.h
display/composer/v1_0/hdi_impl/: display_composer_hdi_impl.h  display_composer_interface.cpp
display/composer/v1_0/include/: idisplay_composer_interface.h
display/composer/v1_1/: BUILD.gn  DisplayComposerType.idl  IDisplayComposer.idl  IModeCallback.idl  ISeamlessChangeCallback.idl
display/composer/v1_1/display_command/: display_cmd_responser.h  display_cmd_utils.h
display/composer/v1_1/hdi_impl/: display_composer_hdi_impl.h  display_composer_interface.cpp
display/composer/v1_1/include/: idisplay_composer_interface.h
display/composer/v1_2/: BUILD.gn  DisplayComposerType.idl  IDisplayComposer.idl  IVBlankIdleCallback.idl
display/composer/v1_2/display_command/: display_cmd_requester.h  display_cmd_responser.h  display_cmd_utils.h
display/composer/v1_2/hdi_impl/: display_composer_hdi_impl.h
display/composer/v1_2/include/: idisplay_composer_interface.h
display/composer/v1_4/: BUILD.gn  DisplayComposerType.idl  IDisplayComposer.idl
display/composer/v1_4/display_command/: display_cmd_requester.h  display_cmd_responser.h  display_cmd_utils.h
display/composer/v1_4/hdi_impl/: display_composer_hdi_impl.h  display_composer_interface.cpp
display/composer/v1_4/include/: idisplay_composer_interface.h
distributed_audio/: bundle.json
distributed_camera/: bundle.json
drm/: bundle.json
drm/v1_1/: BUILD.gn  IMediaKeySystemFactory.idl  MediaKeySystemTypes.idl
ethernet/: bundle.json
face_auth/: bundle.json  config.gni
face_auth/v1_1/: BUILD.gn  FaceAuthTypes.idl  IExecutor.idl  IFaceAuthInterface.idl  ISaCommandCallback.idl
fingerprint_auth/: bundle.json  config.gni
huks/: bundle.json
input/: bundle.json
intelligent_voice/: bundle.json
light/: bundle.json
low_power_player/: bundle.json
low_power_player/v1_0/: BUILD.gn  ILowPowerPlayerFactory.idl  ILppAudioSinkAdapter.idl  ILppAudioSinkCallback.idl  ILppSyncManagerAdapter.idl  ILppSyncManagerCallback.idl  ILppTypes.idl
motion/v1_1/: BUILD.gn  IMotionInterface.idl  MotionTypes.idl
ril/v1_5/: BUILD.gn  IRil.idl  IRilCallback.idl  Types.idl
sensor/v3_1/: BUILD.gn  ISensorInterface.idl  ISensorTransformInterfaces.idl  ISensorTransformTypes.idl  SensorTypes.idl
user_auth/v4_1/: BUILD.gn  IUserAuthInterface.idl  UserAuthTypes.idl
(+782 files in other folders)
