# Copyright (c) 2026 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/config/components/hdi/hdi.gni")

if (defined(ohos_lite)) {
  group("libaudio_proxy_6.1") {
    deps = []
    public_configs = []
  }
} else {
  hdi("audio") {
    module_name = "audio_service"

    sources = [
      "AudioTypes.idl",
      "IAudioCapture.idl",
      "IAudioCaptureCallback.idl",
      "IAudioAdapter.idl",
      "IAudioManager.idl",
    ]

    branch_protector_ret = "pac_ret"
    no_other_header_files = true
    generate_with_version = true
    language = "c"
    subsystem_name = "hdf"
    innerapi_tags = [
      "chipsetsdk",
    ]
    part_name = "drivers_interface_audio"
  }
}
