# Copyright (c) 2024 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/config/components/hdi/hdi.gni")
if (defined(ohos_lite)) {
  group("libcamera_proxy_1.3") {
    deps = []
    public_configs = []
  }
} else {
  hdi("camera") {
    module_name = "camera_service"
    imports = [ "ohos.hdi.camera.v1_2:camera" ]

    sources = [
      "ICameraDevice.idl",
      "ICameraHost.idl",
      "IImageProcessCallback.idl",
      "IImageProcessService.idl",
      "IStreamOperator.idl",
      "IStreamOperatorCallback.idl",
      "IVideoProcessCallback.idl",
      "IVideoProcessService.idl",
      "IVideoProcessSession.idl",
      "Types.idl",
    ]

    sequenceable_pub_deps = [
      "../sequenceable/buffer_handle:libbuffer_handle_sequenceable_1.0",
      "../sequenceable/buffer_producer:libbuffer_producer_sequenceable_1.0",
      "../sequenceable/map_data:libmap_data_sequenceable_1.0",
    ]
    sequenceable_ext_deps = [
      "graphic_surface:buffer_handle",
      "graphic_surface:surface",
    ]

    language = "cpp"
    subsystem_name = "hdf"
    part_name = "drivers_interface_camera"
  }
}
