import("//build/ohos.gni")

config("video_parcel_pub_include") {
  include_dirs = [ "./" ]
}

ohos_static_library("video_parcel_headers") {
  branch_protector_ret = "pac_ret"
  public_configs = [ ":video_parcel_pub_include" ]
 
  subsystem_name = "hdf"
  part_name = "drivers_interface_codec"
}
