# Copyright (c) 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//drivers/hdf_core/adapter/uhdf2/hdi.gni")
hdi("face_auth") {
  module_name = "drivers_peripheral_face_auth"
  imports = [ "ohos.hdi.face_auth.v1_0:face_auth" ]
  sources = [
    "FaceAuthTypes.idl",
    "IExecutor.idl",
    "IFaceAuthInterface.idl",
    "ISaCommandCallback.idl",
  ]
  sequenceable_ext_deps = [
    "drivers_interface_camera:libbuffer_producer_sequenceable_1.0",
    "graphic_surface:surface",
  ]
  language = "cpp"
  subsystem_name = "hdf"
  part_name = "drivers_interface_face_auth"
}
