
# Copyright (c) 2024 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/config/components/hdi/hdi.gni")
if (defined(ohos_lite)) {
  group("liblow_power_player_proxy_1.0") {
    deps = []
    public_configs = []
  }
} else {
  hdi("low_power_player") {
    module_name = "low_power_player_service"

    sources = [
      "ILppTypes.idl",
      "ILowPowerPlayerFactory.idl",
      "ILppAudioSinkAdapter.idl",
      "ILppSyncManagerCallback.idl",
      "ILppSyncManagerAdapter.idl",
      "ILppAudioSinkCallback.idl",
    ]

    branch_protector_ret = "pac_ret"
    language = "cpp"
    subsystem_name = "hdf"
    part_name = "drivers_interface_lpplayer"
  }
}