# Copyright (c) 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

HDF_CORE_PATH = "../../../hdf_core"
import("$HDF_CORE_PATH/adapter/uhdf2/hdi.gni")
hdi("motion") {
  module_name = "motion_service"
  imports = [ "ohos.hdi.motion.v1_0:motion" ]
  sources = [
    "IMotionInterface.idl",
    "MotionTypes.idl",
  ]

  language = "cpp"
  subsystem_name = "hdf"
  part_name = "drivers_interface_motion"
}
