# Copyright (c) 2025 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/config/components/hdi/hdi.gni")
if (defined(ohos_lite)) {
  group("libril_proxy_1.5") {
    deps = []
    public_configs = []
  }
} else {
  hdi("ril") {
    branch_protector_ret = "pac_ret"
    module_name = "ril_service"
    proxy_deps = [
      "../v1_3:libril_proxy_1.3",
      "../v1_4:libril_proxy_1.4",
    ]
    stub_deps = [
      "../v1_3:libril_stub_1.3",
      "../v1_4:libril_stub_1.4",
    ]
    sources = [
      "IRil.idl",
      "IRilCallback.idl",
      "Types.idl",
    ]
    language = "cpp"
    subsystem_name = "hdf"
    part_name = "drivers_interface_ril"
  }
}