# Copyright (c) 2025 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/config/components/hdi/hdi.gni")
if (defined(ohos_lite)) {
  group("libsensor_proxy_3.1") {
    deps = []
    public_configs = []
  }
} else {
  hdi("sensor") {
    module_name = "sensor_service"

    sources = [
      "ISensorInterface.idl",
      "SensorTypes.idl",
    ]
    innerapi_tags = [
      "chipsetsdk",
      "platformsdk_indirect",
    ]

    proxy_deps = [ "../v3_0:libsensor_proxy_3.0" ]

    stub_deps = [ "../v3_0:libsensor_stub_3.0" ]
    
    no_other_header_files = true

    language = "cpp"
    subsystem_name = "hdf"
    part_name = "drivers_interface_sensor"
  }
}
