# Copyright (c) 2025 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/config/components/hdi/hdi.gni")
import("../config.gni")

hdi("user_auth") {
  module_name = "drivers_peripheral_user_auth"
  sources = [
    "IUserAuthInterface.idl",
    "UserAuthTypes.idl",
  ]
  stub_deps = [
    "../v4_0:libuser_auth_stub_4.0",
  ]
  proxy_deps = [
    "../v4_0:libuser_auth_proxy_4.0",
  ]
  language = "cpp"
  subsystem_name = "hdf"
  part_name = "drivers_interface_user_auth"
}
