# Copyright (C) 2023 - 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//drivers/hdf_core/adapter/uhdf2/uhdf.gni")

config("map_data_sequenceable_config") {
  include_dirs = [
    "./",
    "../include",
  ]
}

ohos_shared_library("libmap_data_sequenceable_1.0") {
  sources = [ "map_data_sequenceable.cpp" ]

  all_dependent_configs = [ ":map_data_sequenceable_config" ]
  public_configs = [ ":map_data_sequenceable_config" ]

  external_deps = [
    "c_utils:utils",
    "graphic_surface:surface",
    "hdf_core:libpub_utils",
    "hilog:libhilog",
    "ipc:ipc_single",
  ]
  cflags_cc = [ "--coverage" ]
  ldflags = [ "--coverage" ]
  install_images = [ system_base_dir ]
  relative_install_dir = "chipset-sdk"
  subsystem_name = "hdf"
  innerapi_tags = [ "chipsetsdk" ]
  part_name = "drivers_interface_camera"
}
