# Copyright (C) 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")

ohos_shared_library("libcomposer_buffer_cache") {
  sources = [
    "device_cache.cpp",
    "device_cache_manager.cpp",
    "layer_cache.cpp",
  ]

  include_dirs = [
    "./",
    "../",
  ]

  deps = [
    "//drivers/interface/display/buffer/v1_0:libdisplay_buffer_stub_1.0",
    "//drivers/interface/display/buffer/v1_2:libdisplay_buffer_stub_1.2",
  ]

  external_deps = [
    "c_utils:utils",
    "hdf_core:libhdi",
    "hdf_core:libpub_utils",
    "hilog:libhilog",
    "ipc:ipc_single",
  ]

  sanitize = {
    cfi = true
    cfi_cross_dso = true
    debug = false
  }

  install_images = [ chipset_base_dir ]
  subsystem_name = "hdf"
  part_name = "drivers_interface_display"
}
