# Copyright (C) 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")

config("hdifd_parcelable_config") {
  include_dirs = [ "./" ]
}

ohos_shared_library("libhdifd_parcelable") {
  sources = [ "hdifd_parcelable.cpp" ]

  public_configs = [ ":hdifd_parcelable_config" ]

  external_deps = [
    "c_utils:utils",
    "hdf_core:libhdi",
    "hdf_core:libpub_utils",
    "hilog:libhilog",
    "ipc:ipc_single",
  ]

  sanitize = {
    cfi = true
    cfi_cross_dso = true
    debug = false
  }

  innerapi_tags = [ "chipsetsdk" ]
  install_images = [ "system" ]
  subsystem_name = "hdf"
  part_name = "drivers_interface_display"
}
