# Copyright (c) 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//drivers/hdf_core/adapter/uhdf2/hdi.gni")

hdi("display_composer") {
  module_name = "display_composer"

  sources = [
    "DisplayComposerType.idl",
    "IDisplayComposer.idl",
    "IHotPlugCallback.idl",
    "IRefreshCallback.idl",
    "IVBlankCallback.idl",
  ]

  sequenceable_pub_deps = [ "../hdifd_parcelable:libhdifd_parcelable" ]

  language = "cpp"
  subsystem_name = "hdf"
  part_name = "drivers_interface_display"
}

config("libdisplay_composer_hdi_impl_config") {
  include_dirs = [
    "../",
    "../hdifd_parcelable",
  ]
}

ohos_shared_library("libdisplay_composer_hdi_impl") {
  sources = [ "hdi_impl/display_composer_interface.cpp" ]

  public_configs = [ ":libdisplay_composer_hdi_impl_config" ]

  deps = [
    ":libdisplay_composer_proxy_1.0",
    "../hdifd_parcelable:libhdifd_parcelable",
  ]

  external_deps = [
    "c_utils:utils",
    "graphic_chipsetsdk:buffer_handle",
    "hdf_core:libhdi",
    "hdf_core:libpub_utils",
    "hilog:libhilog",
    "hitrace_native:hitrace_meter",
    "init:libbegetutil",
    "ipc:ipc_single",
  ]

  install_images = [ "system" ]
  subsystem_name = "hdf"
  part_name = "drivers_interface_display"
}

config("libcomposer_buffer_cache_config") {
  include_dirs = [ "cache_manager" ]
}

ohos_shared_library("libcomposer_buffer_cache") {
  sources = [
    "cache_manager/device_cache.cpp",
    "cache_manager/device_cache_manager.cpp",
    "cache_manager/layer_cache.cpp",
  ]

  public_configs = [ ":libcomposer_buffer_cache_config" ]

  include_dirs = [ "../" ]

  external_deps = [
    "c_utils:utils",
    "hdf_core:libhdi",
    "hdf_core:libpub_utils",
    "hilog:libhilog",
    "ipc:ipc_single",
  ]

  install_images = [ chipset_base_dir ]
  subsystem_name = "hdf"
  part_name = "drivers_interface_display"
}
