# Copyright (c) 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/config/components/hdi/hdi.gni")

hdi("display_composer") {
  module_name = "display_composer"
  imports = [ "ohos.hdi.display.composer.v1_0:display_composer" ]

  sources = [
    "DisplayComposerType.idl",
    "IDisplayComposer.idl",
    "IModeCallback.idl",
    "ISeamlessChangeCallback.idl",
  ]

  sequenceable_pub_deps = [ "../hdifd_parcelable:libhdifd_parcelable" ]

  language = "cpp"
  subsystem_name = "hdf"
  part_name = "drivers_interface_display"
}
